@@ -49,6 +49,11 @@ There are two ways to use this module:
 Clean-up terraform managed resources.
 
 ```sh
+# Destroy compute nodes that have not been powered down by the slurm controller
+$ CLUSTER_NAME=$(terraform output cluster_name)
+$ ../scripts/destroy_nodes.py ${CLUSTER_NAME}
+
+# Destroy terraform managed pieces of the slurm cluster
 $ terraform destroy -var-file=vars.tfvars
 ```
 
@@ -64,3 +69,7 @@ controller instance via scripts. Ergo, if the controller is destroyed
 before all compute node instances are terminated, the cloud administrator
 must manually handle the termination of orpahned compute node instances.
 Failure to manually moderate resources may lead to additional cloud costs.
+
+A convienance script, [`destroy_nodes.py`](../scripts/destroy_nodes.py), is
+provided to assist with node cleanup. Although it can be ran at any time, it is
+suggested to run this before `terraform destroy` would be run.
